# peks-for-cloud

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_consumer.cpp  data_owner.cpp  server.cpp  util.cpp  util.h
data/: keywords.txt  server_config  tesham_mutna_ruins.txt
